# textredigerare-cpp

./: .clang-format  .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  EditorBuffer.cpp  EditorBuffer.h  README.md  build.ninja  cmake_install.cmake  compile_commands.json  main.cpp  textredigerare_cpp
src/: EditorBuffer.cpp  EditorBuffer.h  Interface.cpp  Interface.h  main.cpp
